2012-02-25  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: regenerate with +datum (#122)

2012-02-20  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 4.8.0 Beta1. 

	* src/PJ_isea.c: Add Icosahedral Snyder Equal Area projection (#111)

	* src/nad2nad.c: completely removed as part of the ctable2 overhaul.

	* src/cs2cs.c, src/pj_init.c, src/geod_set.c, src/nad2nad.c, src/geod.c:
	Use parenthesis around assignments in if statements (#123).

	* src/nad2bin.c: improve io error checking (#140).

	* src/PJ_healpix.c: fix windows build issues (#133)

2012-02-15  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_utils.c: Add pj_get_spheroid_defn() (#142)

2012-02-08  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_apply_gridshift.c: Ensure that one amoung many points
	falling outside the grid areas will not cause the remainder to not
	be datum shifted in a way that is hard to diagnose. (#45)

2012-02-01  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_apply_gridshift.c: ensure we try to use grids as long as we
	are within epsilon of the edge (#141). 

2012-01-31  Frank Warmerdam  <warmerdam@pobox.com>

	* src/nad2bin.c: fix comparison test for -f flag (#139).

2011-12-22  Frank Warmerdam  <warmerdam@google.com>

	* src/pj_init.c; Only split arguments on pluses following spaces 
	in pj_init_plus() (#132)

2011-12-14  Frank Warmerdam  <warmerdam@google.com>

	* src/pj_open_lib.c: make sure we check errno before logging messages (#131).

2011-12-13  Frank Warmerdam  <warmerdam@google.com>

	* src/PJ_healpix.c, etc: added healpix support contributed by
	Landcare in New Zealand. 

2011-11-22  Frank Warmerdam  <warmerdam@pobox.com>

	* src/nad_init.c, src/pj_gridinfo.c, src/nad2bin.c: Implement
	support for "ctable2" format grid shift files.

2011-11-18  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_mutex.c, src/pj_apply_vgridshift.c: avoid unused warnings.

2011-11-13  Frank Warmerdam  <warmerdam@pobox.com>
