@@ -1,3 +1,8 @@
+2012-02-26  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/Makefile.am, src/mutltistresstest.c: provide for building
+	multistresstest in the makefile, and slightly improve it. 
+
 2012-02-25  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* nad/epsg: regenerate with +datum (#122)
